--- a/index.ipynb
+++ b/index.ipynb
@@ -108,13 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_of_weeks # 3\n",
     "number_of_weeks = 3\n",
-    "number_of"
+    "number_of_weeks"
    ]
   },
   {
@@ -131,7 +142,8 @@
    "outputs": [],
    "source": [
     "number_of_weeks # 5\n",
-    "number_of_weeks = 5"
+    "number_of_weeks = 5\n",
+    "number_of_wee"
    ]
   },
   {
